# CMake_Tests_and_Tooling_udemy_course

./: .gitignore  CMakeLists.txt  Makefile  conanfile.py  vcpkg.json
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  Docs.cmake  LTO.cmake  Sanitizers.cmake  Warnings.cmake
src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h
tests/: CMakeLists.txt  main.cc
